# mkv-lab

./: .gitignore  README.md  make_symlinks.sh  pyproject.toml  requirements.txt
src/: __init__.py  extract_srt.py  fix_cc.py  frag.py  make_mkv.py  rename.py  resub_mkv.py  streams.py  track_filter.py  upper.py
test/: test_fix_cc.py
